--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,6 +238,11 @@ article.active {
   font-size: var(--fs-7);
   font-weight: var(--fw-500);
 }
+.auto-type {
+    display: inline;
+    white-space: nowrap; /* Prevents the cursor from wrapping to the next line */
+}
+
 
 .article-title {
   position: relative;
